--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-       <div>TODO make cv.</div>
+<div>TODO make CV.</div>
+<p>loren ipsum</p>
+
 </body>
 </html>
