--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,14 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+    <title>CV</title>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-<div>TODO make CV.</div>
-<p>loren ipsum</p>
-<p>хостинг</p>
-<p>fffff</p>
+
+<header>
+    <section class="header-block">
+        <div class="flex header-name">
+            <h1>Денис Березнев</h1>
+        </div>
+        <div class="flex nav">
+            <a href="#">Обо мне</a>
+            <a href="#">Проекты</a>
+            <a href="#">Отзывы</a>
+            <a href="#">Контакты</a>
+        </div>
+        <div class="flex header-photo">
+            <figure class="photo-background"></figure>
+        </div>
+        <div class="flex header-skills">
+            <p>Доброго времени суток, меня зовут Денис. Занимаюсь разработкой сайтов с нуля, под ключ. Специалист по
+                CMS WordPress, OpenCart, Elgg. Выполняю верстку и программирование сайтов. Делаю верстку на Bootstrap,
+                таким образом Ваш сайт будет отлично выглядеть на всех устройствах. </p>
+        </div>
+        </section>
+</header>
+
+<main>
+  <section class="projects">
+          <h2 class="projects-heading">Проекты</h2>
+      </div>
+      <div class="my-projects"></div>
+      <div class="projects-view">
+      <h3>Сайт «Светлый день»</h3>
+          <span>2017 · Программирование · Верстка </span>
+      </div>
+  </section>
+
+</main>
+
+
 
 </body>
 </html>
